--- a/EFI/OC/Kexts/SMCSuperIO.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/SMCSuperIO.kext/Contents/Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>HibernationFixup</string>
+	<string>SMCSuperIO</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.lvs1974.HibernationFixup</string>
+	<string>ru.joedm.SMCSuperIO</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>HibernationFixup</string>
+	<string>SMCSuperIO</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.1</string>
+	<string>1.2.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.4.1</string>
+	<string>1.2.5</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -44,42 +44,48 @@
 	<string>12B45b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>as.lvs1974.HibernationFixup</key>
+		<key>ru.joedm.SMCSuperIO</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.lvs1974.HibernationFixup</string>
+			<string>ru.joedm.SMCSuperIO</string>
 			<key>IOClass</key>
-			<string>HibernationFixup</string>
+			<string>SMCSuperIO</string>
 			<key>IOMatchCategory</key>
-			<string>HibernationFixup</string>
+			<string>SMCSuperIO</string>
+			<key>IOPCIClassMatch</key>
+			<string>0x06010000&amp;0xffff0000</string>
 			<key>IOProviderClass</key>
-			<string>IOResources</string>
+			<string>IOPCIDevice</string>
 			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>ACPI</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.8</string>
+	<string>10.6</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 lvs1974. All rights reserved.</string>
+	<string>Copyright © 2018 joedm. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.4</string>
+		<string>1.2.0</string>
+		<key>as.vit9696.VirtualSMC</key>
+		<string>1.0.0</string>
+		<key>com.apple.iokit.IOACPIFamily</key>
+		<string>1.0.0d1</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
